# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  run
assets/: default.frag  default.vert
src/: buffer.h  main.cpp  program.h  shader.h  shaders.h  vert_array.h
